--- a/recipes/llm-voice-assistant/web/public/index.html
+++ b/recipes/llm-voice-assistant/web/public/index.html
@@ -129,6 +129,7 @@
       height: 12pt;
       animation: spin 2s linear infinite;
       margin-left: 10px;
+      margin-right: 10px;
     }
 
     @keyframes spin {
